--- a/style.css
+++ b/style.css
@@ -151,7 +151,7 @@ footer {
 
 h2 {
     text-align: center;
-    margin-bottom: 50px;
+    margin-bottom: 30px;
     padding-top: 20px;
 
 }
@@ -159,16 +159,14 @@ h2 {
 .page-info {
     display: flex;
     justify-content: space-evenly;
-    width: 100%;
-    height: 50px;
 
 }
 
 .social-icon {
     display: flex;
     align-items: center;
-    font-size: 50px;
-    justify-content: space-evenly;
+    font-size: 30px;
+    justify-content: center;
     margin-top: 20PX;
     padding-bottom: 20PX;
 }
@@ -209,7 +207,7 @@ h2 {
         flex-direction: column;
         text-align: center;
         justify-content: space-between;
-        padding: 20px;
+
 
     }
 
@@ -219,13 +217,10 @@ h2 {
 
     footer {
         align-items: center;
-        padding-bottom: 50px;
+        padding-bottom: 30px;
 
     }
 
-    .page-info {
-        margin-top: 20px;
-    }
 
 }
 
